# old-datalogging

./: .gitignore
frontend/: package-lock.json  package.json
sensor-worker/: CMakeLists.txt  config.h  main.c  run.sh  sensor_read_worker.c  workers.c  workers.h
sensor-worker/ads8588h/: defines.h  initialize.h  loop.h
sensor-worker/mcp3008/: defines.h  initialize.h  loop.h
